# mobile

Production 46/backendITSchool/: .dockerignore  .env.example  .gitignore  Dockerfile  README_ANDREY.md  docker-compose.yml  entrypoint.sh  pyproject.toml
Production 46/backendITSchool/migrations/: env.py
Production 46/backendITSchool/migrations.example/: need_migration.py
Production 46/backendITSchool/school_site/: bootstrap.py  main.py  middleware.py  router.py  settings.py  tasks.py
Production 46/backendITSchool/school_site/apps/: __init__.py
Production 46/backendITSchool/school_site/apps/courses/: depends.py  enums.py  exceptions.py  models.py  router.py  schemas.py
Production 46/backendITSchool/school_site/apps/emails/: depends.py  exceptions.py  schemas.py
Production 46/backendITSchool/school_site/apps/events/: depends.py  models.py  router.py  schemas.py
Production 46/backendITSchool/school_site/apps/news/: models.py  (+4 more)
Production 46/backendITSchool/school_site/core/: db.py  depends.py  enums.py  loggers.py  models.py  schemas.py  use_cases.py
Production 46/backendITSchool/scripts/: create_user.py  create_user.sh  run.sh  superadmin_create.sh
Production 46/backendNotificationEmailService/: .gitignore  alembic.ini  pyproject.toml
Production 46/backendNotificationEmailService/migrations/: env.py  utils.py
Production 46/backendNotificationEmailService/notification_email_service/: bootstrap.py  exceptions.py  main.py  router.py  settings.py
Production 46/backendNotificationEmailService/notification_email_service/core/: db.py  loggers.py  models.py
(+470 files in other folders)
