[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.15.2",
    "apscheduler>=3.11.0",
    "bcrypt>=4.3.0",
    "fastapi>=0.115.11",
    "httpx>=0.28.1",
    "minio>=7.2.15",
    "psycopg>=3.2.6",
    "psycopg-binary>=3.2.7",
    "psycopg2>=2.9.10",
    "pydantic-settings>=2.8.1",
    "pydantic[email]>=2.10.6",
    "python-jose>=3.4.0",
    "python-multipart>=0.0.20",
    "pyyaml>=6.0.2",
    "sqlalchemy>=2.0.39",
    "sqlalchemy-utils>=0.41.2",
    "uvicorn>=0.34.2",
]
